assets/et_theme.css
/* ... */
*, ::before, ::after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: #f5f5f5;
}
* {
  --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
}
:root {
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
}
:-moz-focusring {
  outline: 1px dotted ButtonText;
}
:-moz-ui-invalid {
  box-shadow: none;
}
::moz-focus-inner {
  border-style: none;
  padding: 0;
}
::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
  height: auto;
}
::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
[type='search'] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}
abbr[title] {
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}
a {
  color: inherit;
  text-decoration: inherit;
}
body {
  margin: 0;
  font-family: inherit;
  line-height: inherit;
}
button, select, input, textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  padding: 0;
  line-height: inherit;
  color: inherit;
}
button, select {
  text-transform: none;
}
button, [type='button'], [type='reset'], [type='submit'] {
  -webkit-appearance: button;
}
button {
  background-color: transparent;
  background-image: none;
}
button, [role="button"] {
  cursor: pointer;
}
fieldset {
  margin: 0;
  padding: 0;
}
html {
  -webkit-text-size-adjust: 100%;
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  line-height: 1.5;
}
hr {
  height: 0;
  color: inherit;
  border-top-width: 1px;
}
h3, h2, h1, h6, h4, h5 {
  font-size: inherit;
  font-weight: inherit;
}
img {
  border-style: solid;
}
input::placeholder {
  opacity: 1;
  color: #e0e0e0;
}
input::webkit-input-placeholder {
  opacity: 1;
  color: #e0e0e0;
}
input::-moz-placeholder {
  opacity: 1;
  color: #e0e0e0;
}
input:-ms-input-placeholder {
  opacity: 1;
  color: #e0e0e0;
}
input::-ms-input-placeholder {
  opacity: 1;
  color: #e0e0e0;
}
img, video {
  max-width: 100%;
  height: auto;
}
legend {
  padding: 0;
}
p, h3, dl, dd, h2, hr, h1, h6, h4, figure, h5 {
  margin: 0;
}
strong {
  font-weight: bolder;
}
small {
  font-size: 80%;
}
svg, img, iframe, video {
  display: block;
  vertical-align: middle;
}
table {
  text-indent: 0;
  border-color: inherit;
  border-collapse: collapse;
}
textarea {
  resize: vertical;
}
textarea::placeholder {
  opacity: 1;
  color: #e0e0e0;
}
textarea::webkit-input-placeholder {
  opacity: 1;
  color: #e0e0e0;
}
textarea::-moz-placeholder {
  opacity: 1;
  color: #e0e0e0;
}
textarea:-ms-input-placeholder {
  opacity: 1;
  color: #e0e0e0;
}
textarea::-ms-input-placeholder {
  opacity: 1;
  color: #e0e0e0;
}
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
/* windicss layer components */

/* windicss layer utilities */
.container {
  width: 100%;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-left: auto;
  margin-right: auto;
}
@media (min-width: 480px) {
  .container {
    max-width: 480px;
  }
}
@media (min-width: 640px) {
  .container {
    max-width: 640px;
  }
}
@media (min-width: 768px) {
  .container {
    max-width: 768px;
  }
}
@media (min-width: 1024px) {
  .container {
    max-width: 1024px;
  }
}
@media (min-width: 1280px) {
  .container {
    max-width: 1280px;
  }
}
@media (min-width: 1536px) {
  .container {
    max-width: 1536px;
  }
}
.divide-y > :not([hidden]) ~ :not([hidden]) {
  --tw-divide-y-reverse: 0;
  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}
.bg-bg2 {
  background-color: rgb(var(--color-background-2));
}
.bg-bg1 {
  background-color: rgb(var(--color-background-1));
}
.border-scheme-fg {
  border-color: rgb(var(--color-scheme-accentRGB) / .2);
}
.border-scheme-accent {
  border-color: var(--color-scheme-accent);
}
.border-accent2 {
  border-color: rgb(var(--color-accent-2));
}
.border-bg1 {
  border-color: rgb(var(--color-background-1));
}
.border-bg2 {
  border-color: rgb(var(--color-background-2));
}
.rounded-\[\.625rem\] {
  border-radius: .625rem;
}
.border-solid {
  border-style: solid;
}
.border {
  border-width: 1px;
}
.border-0 {
  border-width: 0px;
}
.border-3 {
  border-width: 3px;
}
.border-t-2 {
  border-top-width: 2px;
}
.border-b-2 {
  border-bottom-width: 2px;
}
.block {
  display: block;
}
.inline {
  display: inline;
}
.flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}
.table {
  display: table;
}
.grid {
  display: -ms-grid;
  display: grid;
}
.hidden {
  display: none;
}
.items-center {
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}
.order-2 {
  -webkit-box-ordinal-group: 3;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}
.order-none {
  -webkit-box-ordinal-group: 1;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}
.order-1 {
  -webkit-box-ordinal-group: 2;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}
.h-sm {
  height: 24rem;
}
.h-md {
  height: 28rem;
}
.h-lg {
  height: 32rem;
}
.text-2xl {
  font-size: 1.5rem;
}
.text-lg {
  font-size: 1.125rem;
}
.text-sm {
  font-size: .875rem;
}
.leading-relaxed {
  line-height: 1.625;
}
.m-auto {
  margin: auto;
}
.mt-4 {
  margin-top: 1rem;
}
.mb-4 {
  margin-bottom: 1rem;
}
.mb-2 {
  margin-bottom: 0.5rem;
}
.mr-2 {
  margin-right: 0.5rem;
}
.opacity-0 {
  opacity: 0;
}
/* ... */

